[package]
name = "pids-infos"
version = "0.1.0"
authors = ["gustavosimon <gustavo.andre.simon@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9"
lettre_email = "0.9"

# [[bin]]
# name = "pids-infos\src"
# path = "main.rs"
